addon/traefik-ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: kube-system
spec:
  rules:
  - host: traefik.mysting.io
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-ingress-service
          servicePort: 8080
  - host: grafana.mysting.io
    http:
      paths:
      - path: /
        backend:
          serviceName: monitoring-grafana
          servicePort: 3000
